# rtxpy

./: .gitignore  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  clean_build.sh  kernel.ptx  pyproject.toml  run_gpu_test.bat  setup.cfg  setup.py
.github/workflows/: build_wheels.yml  gpu-test-cleanup.yml  gpu-test.yml  test.yml
conda-recipe/: README.md  bld.bat  build.sh  conda_build_config.yaml  meta.yaml
crtx/: common.h  compileOptiX.sh  dllmain.cpp  internal.h  kernel.cu  rtx.h
crtx/cuew/: cuew.c  cuew.h
crtx/optix_9.1/: optix.h  optix_device.h  optix_function_table.h  optix_host.h  optix_stubs.h  optix_types.h
crtx/optix_9.1/internal/: optix_device_impl.h  optix_device_impl_coop_vec.h  optix_device_impl_transformations.h
cuda/: common.h  kernel.cu
examples/: _utils.py  capetown.py  cell_tower_instancing_demo.ipynb  cuda_utils.py  generate_playground_gif.py  guanajuato.py  hillshade.py  los_angeles.py  mesh_utils.py  multi_gas_urban_rf_planning.ipynb  oblique_3d_terrain_visualization.ipynb  playground.py  rio.py  trinidad.py  viewshed.py
examples/models/: drone.glb  pine_tree.glb
rtx/: __init__.py  rtx.py
rtx/tests/: test_simple.py
rtxpy/: __init__.py  _cuda_utils.py  accessor.py  engine.py  geojson.py  hillshade.py  kernel.ptx  mesh.py  remote_data.py  rtx.py  tiles.py  viewshed.py
rtxpy/analysis/: __init__.py  _common.py  animation.py  hillshade.py  render.py  slope_aspect.py  viewshed.py
rtxpy/tests/: test_accessor.py  test_analysis.py  test_animation.py  test_geojson.py  test_mesh.py  test_render.py  test_simple.py
