[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtxpy"
version = "0.0.4"
description = "Ray tracing using CUDA accessible from Python"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "makepath" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
# GPU dependencies - cupy provides CUDA context management
# Note: otk-pyoptix must be installed separately from NVIDIA
# See: https://github.com/NVIDIA/otk-pyoptix
cuda12 = ["cupy-cuda12x>=12.0"]
cuda11 = ["cupy-cuda11x>=11.0"]
tests = ["pytest"]

[project.urls]
Homepage = "https://github.com/makepath/rtxpy"
Repository = "https://github.com/makepath/rtxpy"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
rtxpy = ["*.ptx"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

