[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtxpy"
version = "0.0.6"
description = "Ray tracing using CUDA accessible from Python"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "makepath" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.21",
    "numba>=0.56",
]

[project.optional-dependencies]
# GPU dependencies - cupy provides CUDA context management
# Install cupy via: conda install -c conda-forge cupy
# Note: otk-pyoptix must be installed separately from NVIDIA
# See: https://github.com/NVIDIA/otk-pyoptix
tests = ["pytest"]
analysis = ["xarray"]
tiles = ["Pillow", "pyproj"]
all = ["xarray", "scipy", "Pillow", "pyproj"]

[project.urls]
Homepage = "https://github.com/makepath/rtxpy"
Repository = "https://github.com/makepath/rtxpy"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
rtxpy = ["*.ptx"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

