[metadata]
author = makepath
description = Ray tracing using CUDA accessible from Python
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = rtxpy
platforms =
    Linux
    Windows
url = https://github.com/makepath/rtxpy

[options]
install_requires =
    numpy>=1.16
packages = find:
python_requires = >=3.7
zip_safe = False

[options.extras_require]
tests =
    pytest
