[metadata]
author = makepath
author_email = a.soklev@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization
description = Ray tracing using CUDA accessible from Python
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = rtxpy
platforms =
    Linux
    Windows
url = https://github.com/makepath/rtxpy

[options]
install_requires =
    numpy>=1.16
packages = find:
python_requires = >=3.7
zip_safe = False

[options.extras_require]
tests =
    pytest
